kohonen-rgb working

--- a/kohonen-rgb/index.htm
+++ b/kohonen-rgb/index.htm
@@ -1,3 +1,5 @@
 <meta http-equiv="refresh" content="1" />
 
-<img src="image.png">
+<img src="out_grid.png">
+<img src="out_image.png">
+<img src="out_image_original.png">
