--- a/kohonen-rgb/index.htm
+++ b/kohonen-rgb/index.htm
@@ -1,5 +1,6 @@
 <meta http-equiv="refresh" content="1" />
 
 <img src="out_grid.png">
-<img src="out_image.png">
+<img src="out_palette.png">
 <img src="out_image_original.png">
+<img src="out_image.png">
